FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for
more details.

You should have received a copy of the GNU General Public License along
with this program; if not, write to the Free Software Foundation, Inc.,
59 Temple Place, Suite 330, Boston, MA 02111-1307  USA
------------------------------------------------------------------------------------
CHANGELOG file
v1.130417
	Bug.		Dynamic library initialisation bug resolved (affected fastcgi builds).
v1.130416
	Enh.		ICU-based ASCII transliteration for arbitrary non-ascii strings implemented with encoder="ascii"
				If the icu library has version suffices, use OBYX_LIBICUVS to set it.
				eg: "_50" or "_3_6" etc.  Use `nm -D libicui18n.so | grep utrans_openU`
	Enh.		Shared libraries are now loaded using .dylib on osx and .so on other unices.
	Enh. 		New environment/obyx config settings for specifying the location of a dynamic shared library
				eg: OBYX_LIBMYSQLDIR /usr/local/mysql/lib
				OBYX_LIBMYSQLDIR (deprecates OBYX_LIBMYSQLCRSO)
				OBYX_LIBPQDIR 	(deprecates OBYX_LIBPQSO)
				OBYX_LIBPCREDIR (deprecates OBYX_LIBPCRESO)
				OBYX_LIBZIPDIR  (deprecates OBYX_LIBZIPSO)
				OBYX_LIBSSLDIR  (deprecates OBYX_LIBSSLSO)
				OBYX_LIBICUDIR  (new)
				OBYX_LIBCURLDIR (deprecates OBYX_LIBCURLSO)
				OBYX_LIBGMPDIR  (deprecates OBYX_LIBGMPSO)
				Backwards compatible support is still provided for the *SO environment variables.
	Enh.		Relocated Header dependancies on XercesC/XQilla as centrally as possible.
				Also mapped function dependancies. See dummy declaration in xml.h

v1.130401
	Enh.		Preventing xpath crashes.
v1.130315
	Bug.		Sysparm keymap returning meta-parameters.
	Enh.		Added multiple attribute to input on xhtml1 (naughty, but nice).
v1.130226
	Bug.		fastcgi variables that should change per request are not being cleared.
v1.130212
	Bug.		json encoder failing.
v1.130129
	Enh.		Analysis fixes and likewise a rare xpath bug..
v1.130114